--- a/app/src/main/res/layout/home_screen_fragment.xml
+++ b/app/src/main/res/layout/home_screen_fragment.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:layout_height="match_parent"
-        android:text="Здесь будут тренировочки"
-        />
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content">
+        <com.example.workoutdiary.presentation.custom_views.SideDatePicker
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal" />
+    </LinearLayout>
+
 
 </LinearLayout>
