1. Fixed the logical error: now i'm using LocalDate instead of LocalDateTime, where it necessary. 2. Added ability to save onTextClickedListener for the SideDatePicker. Now SideDatePicker state survives configuration changes. 3. Added recycler view to the HomeScreenFragment and the adapter for it. 4. Dependencies graph was updated.

--- a/app/src/main/res/layout/home_screen_fragment.xml
+++ b/app/src/main/res/layout/home_screen_fragment.xml
@@ -5,16 +5,29 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content">
+
         <com.example.workoutdiary.presentation.custom_views.SideDatePicker
+            android:id="@+id/month_date_picker"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal" />
-    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/training_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        tools:listitem="@layout/training_item"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Скоро здесь появится статистика :)" />
 
 
 </LinearLayout>
