--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
     android:id="@+id/bottomAppBar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/colorPrimary"
     app:fabCradleMargin="12dp"
     android:layout_gravity="bottom">
     <com.google.android.material.bottomnavigation.BottomNavigationView
