--- a/app/src/main/res/layout/training_item.xml
+++ b/app/src/main/res/layout/training_item.xml
@@ -5,7 +5,8 @@
     android:id="@+id/training_item"
     android:layout_margin="8dp"
     android:layout_width="150dp"
-    app:cardElevation="4dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="6dp"
     android:layout_height="150dp">
     <LinearLayout
         android:layout_width="match_parent"
