--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sky_blue_main">#717BF1</color>
+    <color name="sky_blue_main_light">#F4F4FB</color>
+    <color name="sky_blue_secondary">#41B1E9</color>
 </resources>
