--- a/app/src/main/res/layout/muscle_drop_down_item.xml
+++ b/app/src/main/res/layout/muscle_drop_down_item.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/muscle_item_name"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:textAlignment="center"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:padding="8dp"
+    android:textSize="15sp"
     tools:text="Бицепс"
     android:textStyle="bold" />
