1. Added ability to choose muscles and exercise in add edit training block screen. 2. Problem with empty trainings because of deleting from recent apps screen was solved.

--- a/app/src/main/res/layout/add_edit_training_block_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_block_screen.xml
@@ -95,6 +95,19 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/sets_layout"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/save_training_block_button"
+            android:layout_width="match_parent"
+            android:layout_margin="8dp"
+            android:text="@string/save_text"
+            android:layout_height="wrap_content"/>
+
 
     </LinearLayout>
 
