Added ability to save training block of one type (reps and weight)

--- a/app/src/main/res/layout/rep_weght_training_set.xml
+++ b/app/src/main/res/layout/rep_weght_training_set.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:id="@+id/rep_weight_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <com.google.android.material.textfield.TextInputLayout
@@ -14,6 +15,8 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/reps_edit_text"
         android:layout_width="match_parent"
+        android:inputType="number"
+        android:maxLength="2"
         android:layout_height="wrap_content"
         />
     </com.google.android.material.textfield.TextInputLayout>
@@ -29,6 +32,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/weight_edit_text"
             android:layout_width="match_parent"
+            android:maxLength="2"
+            android:inputType="number"
             android:layout_height="wrap_content"
             />
     </com.google.android.material.textfield.TextInputLayout>
