--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,5 +43,22 @@
         android:id="@+id/addEditTrainingBlockScreenFragment"
         android:name="com.example.workoutdiary.presentation.add_edit_training_block_screen.AddEditTrainingBlockScreenFragment"
         android:label="add_edit_training_block_screen"
-        tools:layout="@layout/add_edit_training_block_screen" />
+        tools:layout="@layout/add_edit_training_block_screen" >
+        <argument
+            android:name="trainingId"
+            app:argType="integer" />
+        <argument
+            android:name="trainingBlockId"
+            android:defaultValue="-1"
+            app:argType="integer" />
+        <argument
+            android:name="setOrder"
+            app:argType="integer"
+            android:defaultValue="-1" />
+        <argument
+            android:name="ExerciseType"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
+    </fragment>
 </navigation>
