--- a/app/src/main/res/layout/rep_training_block_item.xml
+++ b/app/src/main/res/layout/rep_training_block_item.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rep_item"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/set_number_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginBottom="4dp" />
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="@string/reps"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        android:hint="@string/reps">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/rep_reps_edit_text"
             android:layout_width="match_parent"
-            android:inputType="number"
-            android:maxLength="2"
             android:layout_height="wrap_content"
-            />
+            android:inputType="number"
+            android:maxLength="2" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
