1. Bug with 0 set in SetsListView was fixed 2. Bug with 0 setOrder in Parameterized sets was fixed. 3. Progress bar was added.

--- a/app/src/main/res/layout/add_edit_training_block_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_block_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.add_edit_training_block_screen.AddEditTrainingBlockScreenFragment">
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible">
@@ -137,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
