--- a/app/src/main/res/layout/add_edit_training_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_screen.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".presentation.add_edit_training_screen.AddEditTrainingScreenFragment"
-    xmlns:tools="http://schemas.android.com/tools">
-<LinearLayout
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
@@ -13,45 +12,56 @@
         android:id="@+id/date_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center_horizontal"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:gravity="center_horizontal"
-        tools:text = "20.04.22 (сегодня)"
-       />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="20.04.22 (сегодня)" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_margin="16dp"
         android:hint="@string/training_name"
-        android:layout_margin="16dp">
+        app:layout_constraintTop_toBottomOf="@+id/date_text_view"
+        tools:layout_editor_absoluteX="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/training_name_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-         />
+            android:layout_height="66dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-        android:id="@+id/training_blocks_list"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/training_blocks_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
         android:orientation="vertical"
-        android:padding="8dp"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/add_training_block_button"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        tools:layout_editor_absoluteX="8dp" />
+
     <Button
         android:id="@+id/add_training_block_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/add_training_block"/>
+        android:layout_marginBottom="8dp"
+        android:text="@string/add_training_block"
+        app:layout_constraintBottom_toTopOf="@+id/delete_training_button"
+        tools:layout_editor_absoluteX="16dp" />
+
     <Button
         android:id="@+id/delete_training_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/delete_training"/>
-</LinearLayout>
-</ScrollView>
+        android:layout_marginBottom="8dp"
+        android:text="@string/delete_training"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
