1. AddEditTrainingScreenFragment is displaying immediately now. 2. You can have only one training at day right now. 3. Bug with today training was fixed. 4. Placeholder text for training without name was added. 5. Max size of training item text was decreased.

--- a/app/src/main/res/layout/add_edit_training_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_screen.xml
@@ -32,7 +32,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/training_name_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="66dp" />
+            android:inputType="textCapSentences"
+            android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
