--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_height="match_parent"
         android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_nav_menu"/>
 
 </com.google.android.material.bottomappbar.BottomAppBar>
