--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,4 +60,9 @@
             app:argType="integer"
             android:defaultValue="-1" />
     </fragment>
+    <fragment
+        android:id="@+id/exercisesAndMusclesScreenFragment"
+        android:name="com.example.workoutdiary.presentation.add_exercises_and_muscles_screen.ExercisesAndMusclesScreenFragment"
+        android:label="add_exercises_and_muscles_screen"
+        tools:layout="@layout/add_exercises_and_muscles_screen" />
 </navigation>
