--- a/app/src/main/res/layout/add_edit_training_screen.xml
+++ b/app/src/main/res/layout/add_edit_training_screen.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/add_training_block"
+        android:text="@string/add_exercise"
         app:layout_constraintBottom_toTopOf="@+id/delete_training_button"
         tools:layout_editor_absoluteX="16dp" />
 
