1. Muscles and AddMuscle screens are added. 2. Code functionality was expanded to provide new screens.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,4 +69,8 @@
         android:id="@+id/addExerciseScreenFragment"
         android:name="com.example.workoutdiary.presentation.add_exercises_and_muscles_screen.exercises_screen.add_exercise_screen.AddExerciseScreenFragment"
         android:label="AddExerciseScreenFragment" />
+    <fragment
+        android:id="@+id/addMuscleScreenFragment"
+        android:name="com.example.workoutdiary.presentation.add_exercises_and_muscles_screen.muscles_screen.add_muscle_screen.AddMuscleScreenFragment"
+        android:label="AddMuscleScreenFragment" />
 </navigation>
